# measurement_manager

./: CMakeLists.txt  README.md  license.txt
.github/workflows/: cmake-single-platform.yml
example/: main.cpp
include/: measurement_manager.hpp
test/: test_measurement_manager.cpp
